--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
   body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
-    background-color: #f0f2f5;
+    background-color: #FFF4C9;
     color: #333;
     height: 100vh;
   }
@@ -41,7 +41,7 @@ body {
 
 nav{
     display: flex;
-    background-color: #D7E4C0;
+    background-color: #C7E78B;
     min-height: 80px;
     align-items: center;
     justify-content: space-around;
@@ -70,7 +70,7 @@ button{
 .home{
     backdrop-filter: blur(16px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
-    background-color: #C6DCBA;
+    background-color: #81AE64;
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);  
     padding: 20px;  
@@ -89,7 +89,7 @@ h1{
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
     width: 100%;
-    background-color: #BBC3A4;
+    background-color: #C7E78B;
 }
 
 
@@ -102,7 +102,7 @@ h1{
     width: 100%;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-    background-color: #BBC3A4;
+    background-color: #C7E78B;
 }
 
 .intro{
@@ -113,7 +113,7 @@ h1{
     margin: 0 auto;
     width: 100%;
     padding: 5px;
-    background-color: #BBC3A4;
+    background-color: #C7E78B;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
 }
